# gridsim

./: .gitignore  README.md  pypsa.ipynb
.github/actions/: backend.yml  frontend.yml
.github/actions/backend/: action.yml
.github/actions/frontend/: action.yml
.github/workflows/: deploy.yml  pr.yml
.github/workflows/actions/: deploy.yml  pr.yml
.github/workflows/steps/: frontend.yml
.moon/: workspace.yml
backend/: .lambdaignore  Dockerfile  Dockerfile.alpine  Dockerfile.deps  README.md  moon.yml  pyproject.toml  requirements.txt
backend/gridsim_backend/: __init__.py
backend/gridsim_backend/app/: colors.py  indices.py  main.py  network.py  types.py
backend/notebooks/: demand-elasticity.ipynb  load-modelling.ipynb  poc.ipynb  pypsa.ipynb  scratch.ipynb
backend/scripts/: daily-summary.py  solar-daily-summary.py
data/: daily-summary.json  inputs.json  opennem-energy-fueltech_group-5m-20250301-20250308.json  solar-daily-summary.json
frontend/: .env.production  index.html  moon.yml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  theme.ts  types.ts
frontend/src/common/: colors.ts  object.ts  use-responsive-mode.ts
frontend/src/components/: Link.tsx  PageWrapper.tsx  styles.module.css
frontend/src/data/: chart-colours.ts  compare.ts  nivo.ts  plotly.ts  results.ts  tools.ts
frontend/src/icons/: GitHubCat.tsx
frontend/src/routes/: __root.tsx  about.tsx  index.tsx  scenarios.intro.tsx  (+3 more)
infrastructure/: cdk.json  moon.yml  package-lock.json  package.json
infrastructure/lib/: gridsim-stack.ts
(+74 files in other folders)
